@startuml
!theme vibrant
skinparam classAttributeIconSize 0

' Define the classes
class Author {
  + required string Name
  + List<Cheep>
}

class Cheep {
  + Guid CheepId
  + required string Text
  + required DateTime Timestamp
  + requried Author Author
  + ICollection<Reaction>? Reactions
}

class Reaction{
  + requried Guid CheepId
  + requried string AuthorName
  + ReactionType ReactionType
}

class IdentityUser {
  string Id
  string SecurityStamp
}

class Follower{
  + string? FollowerId
  + string? FollowedId
  + Author? FollowerAuthor
  + Author? FollowedAuthor
}

' Define relationships
Author "1" *-- "0..*" Cheep : has
Author --|> IdentityUser
Author "0..*" *-- Follower: follows
Follower "0..*" --* Author: follows
Reaction -- Cheep
@enduml